prevent width of app getting too big

--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,25 @@
 html {
     font-family: 'Roboto', sans-serif;
-    margin: 0;
 }
 
 body {
     margin: 2px 2px;
 }
 
+.App {
+    width: 100%;
+    margin: 0 auto;
+}
+
 .container {
-    padding: 2% 10%;
-    align-content: center;
+    margin: 15px auto;
+    max-width: 800px;
 }
 
 @media only screen and (max-width: 600px) {
     .container {
-        padding: 0 0;
-        max-width: 100%;
+        margin: 0 0;
+        width: 100%;
     }
 }
 
